feat: add desktop version of job detail page

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -1,6 +1,6 @@
 :root {
-//   --color-primary-01: rgba(47, 71, 134, 1);
-  --color-primary-01: #004A46;
+  //   --color-primary-01: rgba(47, 71, 134, 1);
+  --color-primary-01: #004a46;
   --color-secondary-02: rgba(47, 134, 71, 1);
   --color-secondary-light: #d2ebc0;
 
@@ -28,4 +28,5 @@
   --menu-height: 5.18rem;
 
   --border-gray-01: #e2e2e2;
+  --desktop-nav-height: 4rem;
 }
