--- a/src/components/templates/menu-cursor/menu-cursor.module.scss
+++ b/src/components/templates/menu-cursor/menu-cursor.module.scss
@@ -14,6 +14,7 @@
   background-color: var(--color-primary-01);
   display: flex;
   justify-content: center;
+  height: var(--desktop-nav-height);
 }
 
 .menuItems {
