feat(general): add no border props for last item in web

--- a/src/components/atoms/accordion/accordion.module.scss
+++ b/src/components/atoms/accordion/accordion.module.scss
@@ -6,7 +6,7 @@
 
 .tabs {
   overflow: hidden;
-//   border-top: 1px solid var(--border-gray-01);
+  //   border-top: 1px solid var(--border-gray-01);
 }
 
 .tab {
@@ -28,6 +28,10 @@
     &::after {
       content: url('/icons/arrow-down-black.svg');
       transition: all 0.35s;
+    }
+
+    &_noBorder {
+      border-bottom: none;
     }
   }
 
