--- a/src/pages/achievements/components/claim-points/claim-points.module.scss
+++ b/src/pages/achievements/components/claim-points/claim-points.module.scss
@@ -28,4 +28,18 @@
 .proofspaceButton {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.proofspaceLink {
+  color: var(--color-primary-01);
+  height: 2.75rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-weight: 600;
+  background-color: var(--color-white);
+  border-radius: 50px;
+  padding: 0 1rem;
+  border: 1px solid var(--color-gray-04);
 }
