--- a/src/components/templates/payment-methods/payment-methods.module.scss
+++ b/src/components/templates/payment-methods/payment-methods.module.scss
@@ -14,6 +14,12 @@ $color-blue-dark: #2f4786;
     padding: 0 1rem;
   }
 
+  &__crypto {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
   &__connected {
     display: flex;
     align-items: center;
