--- a/src/components/organisms/alert-modal/alert-modal.module.scss
+++ b/src/components/organisms/alert-modal/alert-modal.module.scss
@@ -6,23 +6,27 @@
 .container {
   padding: 24px 16px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 
   .content {
     padding: 24px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 8px;
     gap: 1rem;
 
     .title {
       color: var(--color-primary-01);
       font-weight: 600;
+      text-align: center;
     }
 
     .footer,
     .subtitle {
       font-size: 14px;
+      text-align: center;
     }
   }
 
