--- a/src/components/templates/menu-cursor/menu-cursor.module.scss
+++ b/src/components/templates/menu-cursor/menu-cursor.module.scss
@@ -57,3 +57,15 @@
     padding: 0;
   }
 }
+
+.avatar {
+  position: relative;
+  cursor: pointer;
+}
+
+.switchAccountMenu {
+  position: absolute;
+  right: 0;
+  top: 3.25rem;
+  z-index: 2;
+}
