--- a/src/pages/wallet/mobile/mobile.module.scss
+++ b/src/pages/wallet/mobile/mobile.module.scss
@@ -7,5 +7,8 @@
   .load {
     display: flex;
     justify-content: center;
+    color: var(--color-primary-01);
+    font-weight: 600;
+    cursor: pointer;
   }
 }
