refactor(profile-edit): move logic to a shared hook

--- a/src/components/atoms/dropdown-v2/dropdown.module.scss
+++ b/src/components/atoms/dropdown-v2/dropdown.module.scss
@@ -4,6 +4,7 @@
   border: 1px solid var(--color-gray-04);
   border-radius: 0.5rem;
   grid-template-columns: minmax(2rem, 1fr) 2.75rem;
+  background: #fff;
 }
 
 .label {
