--- a/src/pages/profile-organization/desktop/edit/edit.module.scss
+++ b/src/pages/profile-organization/desktop/edit/edit.module.scss
@@ -22,6 +22,13 @@
   background: #fff;
   z-index: 3;
 }
+
+.mainHeader {
+  position: sticky;
+  top: 0;
+  z-index: 3;
+  background: #fff;
+}
 .header {
   height: 13rem;
   max-height: 13rem;
