--- a/src/components/atoms/action-list/action-list.module.scss
+++ b/src/components/atoms/action-list/action-list.module.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     gap: 0.625rem;
     border-right: 1px solid var(--color-gray-04);
+    cursor: pointer;
 }
 
 .item:last-child {
