--- a/src/components/molecules/category/category.module.scss
+++ b/src/components/molecules/category/category.module.scss
@@ -1,3 +1,19 @@
+.modalContainer {
+  display: grid;
+  grid-template-rows: 3.5rem 1fr;
+}
+
+.modalHeader {
+  position: sticky;
+  top: 0;
+  background: var(--color-off-white-01);
+  border-bottom: 1px solid var(--border-gray-01);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+}
+
 .list {
   display: flex;
   flex-wrap: wrap;
@@ -16,6 +32,7 @@
   font-family: 'Work Sans';
   border-radius: 2rem;
   color: #fff;
+  cursor: pointer;
   background-color: var(--color-secondary-02);
 }
 
@@ -24,8 +41,25 @@
   margin-bottom: 0.5rem;
 }
 
+.slideUpContent,
+.modalContent {
+  padding: 1rem;
+}
+
 .slideUpContainer {
-  padding: 1.5rem;
+  display: grid;
+  grid-template-rows: 3.5rem 1fr;
+}
+
+.slideUpHeader {
+  position: sticky;
+  top: 0;
+  background: var(--color-off-white-01);
+  border-bottom: 1px solid var(--border-gray-01);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
 }
 
 .placeholder {
