--- a/src/components/molecules/input-modal/input-modal.module.scss
+++ b/src/components/molecules/input-modal/input-modal.module.scss
@@ -31,10 +31,17 @@ $color-gray-light-1: #808289;
   flex: 1;
 }
 
+.content {
+  width: 540px;
+}
+
 .modal {
   padding: 24px 0;
 
   &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 0 16px;
     font-size: 20px;
     font-weight: 600;
@@ -43,7 +50,21 @@ $color-gray-light-1: #808289;
 
   &__search {
     padding: 24px 16px;
-    border-bottom: 1px solid var(--color-gray-04);
+    border-bottom: 1px solid var(--border-gray-01);
+  }
+}
+
+.items {
+  max-height: 300px;
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--color-gray-03);
+    border-radius: 12px;
   }
 }
 
@@ -55,7 +76,7 @@ $color-gray-light-1: #808289;
   cursor: pointer;
 
   & + .item {
-    border-top: 1px solid var(--color-gray-04);
+    border-top: 1px solid var(--border-gray-01);
   }
 
   &--left {
@@ -84,4 +105,12 @@ $color-gray-light-1: #808289;
   font-weight: bold;
   text-align: center;
   margin-top: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  .content {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+  }
 }
