styles(general): add cursor pointer for web version

--- a/src/components/molecules/applicant-list/applicant-list.module.scss
+++ b/src/components/molecules/applicant-list/applicant-list.module.scss
@@ -25,6 +25,7 @@
     gap: 0.5rem;
     justify-content: center;
     border-right: 1px solid var(--border-gray-01);
+    cursor: pointer;
   }
 
   .footerItem:last-child {
