--- a/src/components/organisms/alert-modal/alert-modal.module.scss
+++ b/src/components/organisms/alert-modal/alert-modal.module.scss
@@ -1,14 +1,27 @@
-.header {
-  border-bottom: 1px solid var(--color-gray-04);
+.header,
+.no__header {
   padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--color-gray-04);
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.no__header {
+  border-bottom: none;
 }
 
 .container {
   padding: 24px 16px;
   position: relative;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   gap: 1rem;
+  width: 540px;
+  min-height: 300px;
 
   .content {
     padding: 24px;
@@ -26,22 +39,36 @@
     .footer,
     .subtitle {
       font-size: 14px;
+      font-weight: normal;
       text-align: center;
     }
   }
+}
 
-  .btns {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+.btns {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  border-top: 1px solid var(--border-gray-01);
+}
+
+@media screen and (max-width: 600px) {
+  .modal {
+    width: 100%;
+    margin: 0;
+    border-radius: 1rem 1rem 0 0;
+    height: 100vh;
   }
 
-  .btn {
+  .container {
+    width: unset;
+  }
+
+  .btns {
     position: fixed;
-    bottom: 1rem;
-    right: 1rem;
-    left: 1rem;
-    margin: auto;
+    bottom: 0;
+    width: 100%;
   }
 }
