--- a/src/pages/feed/modal-create/modal-create.module.scss
+++ b/src/pages/feed/modal-create/modal-create.module.scss
@@ -1,22 +1,3 @@
-$color-gray-dark: #2d2d2d;
-
-.container {
-  padding: 16px 0;
-  width: 540px;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 12px 16px;
-  border-bottom: 1px solid var(--color-gray-04);
-  text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  color: $color-gray-dark;
-}
-
 .social {
   display: flex;
   align-items: center;
@@ -71,13 +52,10 @@ $color-gray-dark: #2d2d2d;
   cursor: pointer;
 }
 
-.button {
-  display: flex;
+.footer {
   justify-content: flex-end;
-  background-color: #ffffff;
-  padding: 1rem 1rem 0 1rem;
 }
 
-.button Button {
+.btn {
   max-width: 10.18rem;
 }
