--- a/src/pages/feed/modal-review/modal-review.module.scss
+++ b/src/pages/feed/modal-review/modal-review.module.scss
@@ -1,28 +1,3 @@
-$color-gray-dark: #2d2d2d;
-
-.container {
-  padding: 16px 0;
-  width: 540px;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 12px 16px;
-  border-bottom: 1px solid var(--color-gray-04);
-  text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-  color: $color-gray-dark;
-}
-
-.avatar {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-
 .main {
   max-height: 650px;
   overflow-y: auto;
@@ -35,28 +10,33 @@ $color-gray-dark: #2d2d2d;
     background-color: var(--color-gray-03);
     border-radius: 12px;
   }
+
+  .social {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    padding: 16px;
+
+    .avatar {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+  }
+
+  .text,
+  .image {
+    padding: 16px;
+    &__border {
+      border-bottom: 1px solid var(--color-gray-04);
+    }
+  }
 }
 
-.social {
-  display: flex;
-  flex-direction: column;
-  gap: 0.75rem;
-  padding: 16px;
-}
-
-.text,
-.image {
-  padding: 16px;
-  border-bottom: 1px solid var(--color-gray-04);
-}
-
-.button {
-  display: flex;
+.footer {
   justify-content: flex-end;
-  background-color: #ffffff;
-  padding: 1rem 1rem 0 1rem;
 }
 
-.button Button {
+.btn {
   max-width: 10.18rem;
 }
