fix(feeds): word-break with with expandable and clickable urls in texts

--- a/src/pages/feed/dialog-review/dialog-review.module.scss
+++ b/src/pages/feed/dialog-review/dialog-review.module.scss
@@ -41,6 +41,7 @@
     overflow-y: scroll;
     border-bottom: 1px solid var(--border-gray-01);
     line-height: 1.5;
+    word-break: break-word;
 }
 
 .image {
