--- a/src/components/atoms/input/input.module.scss
+++ b/src/components/atoms/input/input.module.scss
@@ -31,12 +31,28 @@
     font-size: var(--font-size-m);
     background: #fff;
     border-radius: 8px;
-    text-indent: 0.75rem;
+    position: relative;
+
+    .input {
+      text-indent: 0.75rem;
+      width: 100%;
+      height: 100%;
+    }
 
     &::placeholder {
       color: var(--color-gray-03);
     }
   }
+}
+
+.eye {
+  position: absolute;
+  right: 1rem;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .errorItem {
