feat(offer-received): USD equivalent for job total

--- a/src/pages/offer-received/mobile/mobile.module.scss
+++ b/src/pages/offer-received/mobile/mobile.module.scss
@@ -56,6 +56,10 @@
     color: var(--color-primary-01);
     margin-bottom: 0.5rem;
   }
+
+  .detailItemValue_small {
+    color: var(--color-gray-02);
+  }
 }
 
 .jobInfoContainer {
