fix: links on cursor menu (#1078)

--- a/src/components/molecules/category/category.module.scss
+++ b/src/components/molecules/category/category.module.scss
@@ -19,8 +19,12 @@
   flex-wrap: wrap;
   gap: 0.5rem;
   border-radius: 0.5rem;
-  background: var(--color-off-white-01);
+  background: #efefef;
   padding: 1rem;
+  cursor: pointer;
+  &:hover {
+    background: #e6e6e6;
+  }
 }
 
 .item {
