--- a/src/components/templates/menu-touch/menu-touch.module.scss
+++ b/src/components/templates/menu-touch/menu-touch.module.scss
@@ -16,7 +16,7 @@
   height: 100%;
   display: grid;
   padding: 0.5rem 1rem 0 1rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   list-style: none;
   background-color: #ffffff;
   border-top: 1px solid var(--border-gray-01);
