fix(ENG-1101): uploading file onClick to show preview

--- a/src/pages/complete-mission/desktop/desktop.module.scss
+++ b/src/pages/complete-mission/desktop/desktop.module.scss
@@ -107,3 +107,10 @@
     max-width: initial;
   }
 }
+
+.uploadedResume {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
