--- a/src/pages/complete-mission/mobile/mobile.module.scss
+++ b/src/pages/complete-mission/mobile/mobile.module.scss
@@ -79,3 +79,10 @@
 .aboutCompany {
   padding: 1rem;
 }
+
+.uploadedResume {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
