--- a/src/pages/offer-received/mobile/mobile.module.scss
+++ b/src/pages/offer-received/mobile/mobile.module.scss
@@ -89,3 +89,10 @@
   justify-content: center;
   margin: 24px 16px;
 }
+
+.uploadedResume {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
