--- a/src/pages/job-offer-reject/applicant-detail/applicant-detail.module.scss
+++ b/src/pages/job-offer-reject/applicant-detail/applicant-detail.module.scss
@@ -28,3 +28,11 @@
   gap: 0.5rem;
   border-top: 1px solid var(--border-gray-01);
 }
+
+.uploadedResume {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
