--- a/src/pages/offer-received/desktop/desktop.module.scss
+++ b/src/pages/offer-received/desktop/desktop.module.scss
@@ -111,3 +111,10 @@
     max-width: initial;
   }
 }
+
+.uploadedResume {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  cursor: pointer;
+}
