--- a/src/pages/network/desktop/desktop.module.scss
+++ b/src/pages/network/desktop/desktop.module.scss
@@ -16,9 +16,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     padding-left: 2.5rem;
     border-radius: 30px;
     background-image: url('/images/people-page-header.jpg');
@@ -28,17 +25,19 @@
     position: relative;
     overflow: hidden;
 
-    &__overlay {
+    &::before {
+      content: '';
       position: absolute;
       right: 0;
       left: 0;
       top: 0;
       bottom: 0;
-      background: linear-gradient(0deg, transparent, rgba(black, 0.35));
+      background: linear-gradient(0deg, transparent, 50%, rgba(black, 0.35));
     }
   }
 
   .title {
+    position: relative;
     font-size: var(--font-size-xl);
     color: #ffffff;
     font-weight: 600;
@@ -46,6 +45,7 @@
   }
 
   .tagline {
+    position: relative;
     color: #d4d2d0;
     font-size: var(--font-size-m);
   }
