--- a/src/pages/chat/contact-list/desktop/desktop.module.scss
+++ b/src/pages/chat/contact-list/desktop/desktop.module.scss
@@ -25,6 +25,7 @@
   color: var(--color-gray-02);
   font-size: 24px;
   font-weight: 600;
+  text-align: center;
 
   &__subheader {
     font-size: 16px;
