--- a/src/pages/chat/message-detail/desktop/desktop.module.scss
+++ b/src/pages/chat/message-detail/desktop/desktop.module.scss
@@ -23,6 +23,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  max-height: calc(100vh - 4.8rem);
 
   .main {
     flex-grow: 1;
