feat: add desktop verions of search page (#1040)

--- a/src/components/templates/menu-cursor/menu-cursor.module.scss
+++ b/src/components/templates/menu-cursor/menu-cursor.module.scss
@@ -52,7 +52,10 @@
 }
 
 .logo {
-  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 1rem;
   img {
     padding: 0;
   }
