--- a/src/components/atoms/expandable-text/expandable-text.module.scss
+++ b/src/components/atoms/expandable-text/expandable-text.module.scss
@@ -1,6 +1,15 @@
 .expect {
   word-wrap: break-word;
 
+  :where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+    all: revert;
+  }
+
+  :where(a) {
+    text-decoration: none;
+    color: var(--color-primary-01);
+  }
+
   &__seeMore {
     white-space: nowrap;
     color: var(--color-primary-01);
