fix(wallet): click issue on back account even country is not selected (#1114)

--- a/src/components/templates/bank-accounts/bank-accounts.module.scss
+++ b/src/components/templates/bank-accounts/bank-accounts.module.scss
@@ -24,5 +24,9 @@
         align-items: center;
         gap: 0.25rem;
         color: var(--color-primary-01);
+
+        &__disabled  {
+            pointer-events: none;
+        }
     }
 }
