--- a/src/components/templates/menu-cursor/components/switch-account/switch-account.module.scss
+++ b/src/components/templates/menu-cursor/components/switch-account/switch-account.module.scss
@@ -15,6 +15,11 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
+
+  &__btn {
+    align-self: flex-end;
+    margin-bottom: 0.5rem;
+  }
 }
 
 .accountItem {
@@ -37,6 +42,8 @@
   height: 2rem;
   display: flex;
   align-items: center;
+  gap: 1rem;
+
   > span {
     display: block;
     cursor: pointer;
