--- a/src/pages/feed/dialog-create/dialog-create.module.scss
+++ b/src/pages/feed/dialog-create/dialog-create.module.scss
@@ -33,6 +33,7 @@
   padding: 1rem;
   min-height: 200px;
   word-break: break-word;
+  overflow-y: auto;
 }
 
 .image {
@@ -55,7 +56,7 @@
 }
 
 .footer {
-  background-color: aquamarine;
+  background-color: white;
   margin-top: auto;
 }
 
