--- a/src/pages/chat/message-detail/desktop/desktop.module.scss
+++ b/src/pages/chat/message-detail/desktop/desktop.module.scss
@@ -25,19 +25,17 @@
   flex-direction: column;
   max-height: calc(100vh - 4.8rem);
 
-  .main {
+  .main,
+  .main__loading {
     flex-grow: 1;
     padding: 1rem;
     overflow-y: scroll;
+  }
 
-    &::-webkit-scrollbar {
-      width: 4px;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: var(--color-gray-03);
-      border-radius: 12px;
-    }
+  .main__loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .sendBoxContainer {
@@ -61,5 +59,39 @@
       font-weight: 600;
       color: var(--color-primary-01);
     }
+  }
+}
+
+.loader {
+  width: 3rem;
+  height: 3rem;
+  position: relative;
+
+  &::after,
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    border: 0.3rem solid var(--color-primary-01);
+    animation: spin 2s linear infinite;
+  }
+
+  &::after {
+    animation-delay: 1s;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
   }
 }
