--- a/src/components/atoms/dropdown-btn/dropdown-btn.module.scss
+++ b/src/components/atoms/dropdown-btn/dropdown-btn.module.scss
@@ -1,6 +1,9 @@
 .btn {
   padding: 0 1rem;
   height: 2.25rem;
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
   border-radius: 50px;
   min-width: 5rem;
   display: flex;
