--- a/src/pages/search/desktop/search.module.scss
+++ b/src/pages/search/desktop/search.module.scss
@@ -18,7 +18,6 @@
 }
 
 .results {
-  //   padding-bottom: 1rem;
   height: 4rem;
   color: var(--color-gray-02);
   background-color: transparent;
@@ -30,6 +29,7 @@
 
 .listContainer {
   padding: 1rem;
+  gap: 1rem;
   background: #f3f3f3;
   overflow-y: scroll;
   display: flex;
@@ -42,5 +42,6 @@
 }
 
 .item {
-  border: 1px solid #000;
+  max-width: 40rem;
+  min-width: 20rem;
 }
