--- a/src/pages/team/add-member-modal/add-member-modal.module.scss
+++ b/src/pages/team/add-member-modal/add-member-modal.module.scss
@@ -10,29 +10,18 @@
   font-weight: 600;
   font-size: 20px;
   padding: 0 1rem 1rem 1rem;
-  border-bottom: 1px solid var(--border-gray-01);
-
-  .icon {
-    cursor: pointer;
-  }
+  border-bottom: 1px solid var(--border-gray-01);;
 }
 
 .container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  padding: 1rem 0 0;
   height: 450px;
 
   .search {
-    padding: 0 1rem;
-  }
-
-  .title {
-    font-size: 20px;
-    font-weight: 600;
-    color: var(--color-gray-02);
-    padding: 1rem;
+    padding: 0.75rem 1rem;
+    border-bottom: 1px solid var(--border-gray-01);
+    background-color: var(--color-off-white-01);
   }
 
   .list {
@@ -40,9 +29,16 @@
     flex-direction: column;
     overflow-y: auto;
 
-    &__user {
+    &__member {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       padding: 1rem;
-      border-top: 1px solid var(--border-gray-01);
+      border-bottom: 1px solid var(--border-gray-01);
+    }
+
+    &__added {
+      color: var(--color-gray-02);
     }
   }
 
@@ -52,6 +48,10 @@
     padding: 1rem;
     border-top: 1px solid var(--border-gray-01);
   }
+}
+
+.icon {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
