--- a/src/components/templates/menu-touch/menu-touch.module.scss
+++ b/src/components/templates/menu-touch/menu-touch.module.scss
@@ -14,9 +14,11 @@
 
 .navContainer {
   height: 100%;
-  display: grid;
-  padding: 0.5rem 1rem 0 1rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-bottom: 0.5rem;
   list-style: none;
   background-color: #ffffff;
   border-top: 1px solid var(--border-gray-01);
@@ -24,6 +26,7 @@
 
 .navItem {
   height: 2.625rem;
+  width: 2.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
