fix: screner question bug report (#943)

--- a/src/pages/job-create/screener-questions/created/created-modal/created-modal.module.scss
+++ b/src/pages/job-create/screener-questions/created/created-modal/created-modal.module.scss
@@ -59,6 +59,10 @@
     justify-content: flex-end;
     gap: 1rem;
     margin: 0 1rem 1rem;
+
+    &__icon {
+      cursor: pointer;
+    }
   }
 }
 
