fix: prevent unauth users from seeing badges (#825)

--- a/src/pages/search/mobile/mobile.module.scss
+++ b/src/pages/search/mobile/mobile.module.scss
@@ -23,7 +23,7 @@
   position: relative;
   .results {
     position: absolute;
-    right: 13px;
+    right: 2.5rem;
     bottom: 10px;
     opacity: 0.5;
   }
