--- a/src/components/molecules/contact-item/contact-item.module.scss
+++ b/src/components/molecules/contact-item/contact-item.module.scss
@@ -1,20 +1,24 @@
 .container {
   height: 4.25rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 5.7rem;
   align-items: center;
   border-bottom: 1px solid var(--border-gray-01);
   padding: 0 0.75rem;
-}
-
-.right {
-  margin-left: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap: 0.25rem;
+  position: relative;
 }
 
 .time {
-  font-size: var(--font-size-s2);
+  font-size: var(--font-size-s);
   color: var(--color-gray-02);
+  position: absolute;
+  right: 0.75rem;
+  top: 1rem;
+  width: 5rem;
+}
+
+.badge {
+  position: absolute;
+  bottom: 0.75rem;
+  right: 1.4rem;
 }
