--- a/src/pages/chat/message-detail/desktop/desktop.module.scss
+++ b/src/pages/chat/message-detail/desktop/desktop.module.scss
@@ -1,7 +1,13 @@
+.container {
+  height: calc(100vh - var(--desktop-nav-height));
+}
+
 .leftContainer {
+  height: 100%;
+  overflow-y: scroll;
+  position: relative;
   .card {
     padding: 1rem 0;
-    position: relative;
 
     &__header {
       padding: 1rem;
@@ -13,6 +19,8 @@
 
     &__fab {
       position: absolute;
+      right: 1rem;
+      bottom: 1rem;
     }
   }
 }
