--- a/src/components/molecules/payment-detail/payment-detail.module.scss
+++ b/src/components/molecules/payment-detail/payment-detail.module.scss
@@ -1,8 +1,15 @@
 .container {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    & + .container {
-        margin-top: 12px;
-    }
+  & + .container {
+    margin-top: 12px;
+  }
+
+  .total {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
