--- a/src/pages/submit-hours/desktop/desktop.module.scss
+++ b/src/pages/submit-hours/desktop/desktop.module.scss
@@ -1,11 +1,33 @@
-.body {
+.status {
   display: flex;
-  min-height: 100%;
-  overflow: scroll;
-  flex-direction: column;
+  justify-content: center;
+  background-color: var(--color-off-white-01);
+  padding: 2.5rem 2.5rem 0 2.5rem;
+}
+
+.congratulations {
+  width: 100%;
+  max-width: 960px;
+  border-radius: 1rem;
+  padding: 12px;
+  display: grid;
+  grid-template-columns: 44px 1fr;
+  background-color: var(--color-success-01);
+  .congratulationsText {
+    color: #fff;
+    line-height: 20px;
+    font-size: var(--font-size-s2);
+  }
+  .congratulationsText:first-child {
+    font-weight: 600;
+    padding-bottom: 4px;
+  }
 }
 
 .acceptedMessageBox {
+  width: 100%;
+  max-width: 960px;
+  border-radius: 1rem;
   padding: 12px;
   display: grid;
   grid-template-columns: 44px 1fr;
@@ -24,20 +46,18 @@
   }
 }
 
-.congratulations {
-  padding: 12px;
-  display: grid;
-  grid-template-columns: 44px 1fr;
-  background-color: var(--color-success-01);
-  .congratulationsText {
-    color: #fff;
-    line-height: 20px;
-    font-size: var(--font-size-s2);
-  }
-  .congratulationsText:first-child {
-    font-weight: 600;
-    padding-bottom: 4px;
-  }
+.leftContainer {
+  position: sticky;
+  top: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.rightContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
 }
 
 .missionDetailContainer {
@@ -67,17 +87,25 @@
   font-weight: 600;
 }
 
-.btnContainer {
-  border-top: 1px solid var(--border-gray-01);
+.aboutCompany {
   padding: 1rem;
+}
+
+.wallet {
+  display: flex;
+  justify-content: center;
+}
+
+.btnContainer {
   display: flex;
   gap: 0.5rem;
   margin-top: auto;
   flex-direction: column;
-}
+  align-items: center;
 
-.aboutCompany {
-  padding: 1rem;
+  .btn {
+    max-width: initial;
+  }
 }
 
 .uploadedResume {
@@ -85,30 +113,4 @@
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
-}
-.hours{
-  margin: 1rem 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  .status{
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-  }
-  .text{
-    line-height: 18px;
-  }
-  .icon{
-    width: 18px;
-    height: 18px;
-  }
-}
-.view_more{
-  color: var(--color-primary-01);
-  text-decoration: underline green;
-  cursor: pointer;
-}
-.btn{
-  margin-top: 1rem;
 }
