--- a/src/pages/job-offer-reject/applicant-detail/desktop/desktop.module.scss
+++ b/src/pages/job-offer-reject/applicant-detail/desktop/desktop.module.scss
@@ -14,6 +14,46 @@
 
 .accordionContainer {
   padding: 1rem;
+  .current_submission{
+    background-color: var(--color-off-white-01);
+    border-radius: 8px;
+    padding: 1rem;
+    margin-top: 16px;
+    text-align: center;
+    .time{
+      color: black;
+      font-weight: bold;
+    }
+    .hours{
+      margin-top: 0.5rem;
+      color: var(--color-gray-01);
+      font-size: 1.5rem;
+    }
+  }
+  .btn_submission{
+    margin-top: 1rem;
+    display: flex;
+    gap: 10px;
+  }
+  .previous_submission{
+    margin-top: 1rem;
+    .title{
+      padding-bottom: 1rem;
+      border-bottom: 1px solid var(--color-gray-03);
+      font-weight: 600;
+    }
+    .submission{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem 0;
+      .time{
+      }
+      .hours{
+        color: var(--color-gray-01);
+      }
+    }
+  }
 }
 
 .question {
