fix approve hours submission in mobile

--- a/src/pages/job-offer-reject/applicant-detail/mobile/mobile.module.scss
+++ b/src/pages/job-offer-reject/applicant-detail/mobile/mobile.module.scss
@@ -77,6 +77,13 @@
   cursor: pointer;
 }
 .approveMain{
+  margin-top: var(--safe-area);
+  .title{
+    font-weight: 600;
+    font-size: large;
+    text-align: center;
+    padding-bottom: 1rem;
+  }
   .description{
     padding: 0.7rem 2rem;
     text-align: center;
