--- a/src/components/templates/divider/divider.module.scss
+++ b/src/components/templates/divider/divider.module.scss
@@ -7,6 +7,7 @@
   height: 1.5rem;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   font-size: var(--font-size-m);
   font-weight: 600;
   margin-bottom: 1rem;
@@ -23,4 +24,7 @@
     font-weight: 600;
     font-family: 'Hahmlet';
   }
+}
+.icon {
+  cursor: pointer;
 }
