--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -13,7 +13,9 @@
   --color-gray-02: #a2a6b6;
   --color-gray-03: #bec0c7;
   --color-gray-04: rgba(228, 230, 237, 1);
-
+  --color-gray-light-1: #808289;
+  --color-gray-dark: #2d2d2d;
+  --color-yellow-01:#ebb957;
   --font-size-s: 0.75rem; // 12px
   --font-size-s2: 0.875rem; // 14px
   --font-size-m: 1rem; // 16px
