--- a/src/components/templates/job-description-card/job-description-card.module.scss
+++ b/src/components/templates/job-description-card/job-description-card.module.scss
@@ -1,14 +1,10 @@
-$color-gray-light-1: #808289;
-
-$color-gray-dark: #2d2d2d;
-
 .job {
   display: flex;
   flex-direction: column;
   padding: 24px;
 
   &__title {
-    color: $color-gray-dark;
+    color: var(--color-gray-dark);
     font-size: 16px;
     font-weight: 600;
   }
@@ -40,7 +36,7 @@ $color-gray-dark: #2d2d2d;
   }
 
   &__info {
-    color: $color-gray-light-1;
+    color: var(--color-gray-light-1);
     font-size: 14px;
     display: flex;
     align-items: center;
