--- a/src/components/templates/payment-methods/payment-methods.module.scss
+++ b/src/components/templates/payment-methods/payment-methods.module.scss
@@ -1,7 +1,3 @@
-$color-gray-dark: #2d2d2d;
-
-$color-blue-dark: #2f4786;
-
 .connect {
   display: flex;
   flex-direction: column;
@@ -65,7 +61,7 @@ $color-blue-dark: #2f4786;
 
   &__text {
     align-self: flex-start;
-    color: $color-gray-dark;
+    color: --var(color-gray-dark);
 
     & + .connect__text {
       margin-top: 16px;
@@ -73,7 +69,7 @@ $color-blue-dark: #2f4786;
   }
 
   &__link {
-    color: $color-blue-dark;
+    color: var(--color-blue-dark);
     text-decoration: none;
   }
 }
