resolve PR comments

--- a/src/pages/complete-mission/mobile/mobile.module.scss
+++ b/src/pages/complete-mission/mobile/mobile.module.scss
@@ -45,7 +45,7 @@
   grid-template-columns: 44px 1fr;
   background-color: var(--color-warning-01);
   .congratulationsText {
-    color: #333;
+    color: var(--color-black-01);
     line-height: 20px;
     font-size: var(--font-size-s2);
   }
