fix variable in scss

--- a/src/components/templates/payment-methods/payment-methods.module.scss
+++ b/src/components/templates/payment-methods/payment-methods.module.scss
@@ -61,7 +61,7 @@
 
   &__text {
     align-self: flex-start;
-    color: --var(color-gray-dark);
+    color: var(--color-gray-dark);
 
     & + .connect__text {
       margin-top: 16px;
