--- a/src/index.scss
+++ b/src/index.scss
@@ -11,13 +11,12 @@ pwa-action-sheet {
 }
 
 @font-face {
-  font-family: Work Sans;
-  //   src: url('/fonts/Inter-Medium.woff2');
+  font-family: Inter;
   src: url('/fonts/Inter-Regular.woff2');
 }
 
 @font-face {
-  font-family: Work Sans;
+  font-family: Inter;
   font-weight: 600;
   src: url('/fonts/Inter-SemiBold.woff2');
 }
