changing button props and adding custom class in app

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=Hahmlet&family=Work+Sans');
 // @import url(https://fonts.googleapis.com/css?family=Hahmlet:700|Work+Sans:bold);
-@import './components/primitives';
-@import './components/reset';
+@import './styles/primitives';
+@import './styles/reset';
 
 pwa-action-sheet {
   position: fixed;
