--- a/src/components/atoms/button/button.module.scss
+++ b/src/components/atoms/button/button.module.scss
@@ -1,7 +1,6 @@
 .button {
   height: 2.75rem;
   font-size: 1rem;
-  font-weight: 600;
   text-align: center;
   width: 100%;
   max-width: 400px;
@@ -43,4 +42,24 @@
 ,
 .size-s {
   height: 2.25rem;
+}
+
+.normal {
+  font-weight: 400;
+}
+
+.medium {
+  font-weight: 500;
+}
+
+.semi-bold {
+  font-weight: 600;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.removeBorder {
+  border: 0;
 }
